--- a/terraform/hosts.yaml
+++ b/terraform/hosts.yaml
@@ -1,36 +1,36 @@
 ---
 all:
   hosts:
-    k8s-control-plane:
-      ansible_host: 51.250.78.57
-      ip: 192.168.10.7
-    k8s-node-1:
-      ansible_host: 51.250.104.203
-      ip: 192.168.20.20
-    k8s-node-2:
-      ansible_host: 51.250.44.27
-      ip: 192.168.30.29
+    prod-k8s-control-plane:
+      ansible_host: 51.250.2.80
+      ip: 192.168.110.6
+    prod-k8s-node-1:
+      ansible_host: 84.252.143.209
+      ip: 192.168.120.8
+    prod-k8s-node-2:
+      ansible_host: 51.250.46.205
+      ip: 192.168.130.31
 
   vars:
     ansible_user: wizard
     ansible_ssh_private_key_file: /home/wizard/.ssh/yc/yc
     loadbalancer_apiserver:
-      address: 51.250.78.57
+      address: 51.250.2.80
       port: 6443
 
   children:
     kube_control_plane:
       hosts:
-        k8s-control-plane:
+        prod-k8s-control-plane:
     kube_node:
       hosts:
-        k8s-node-1:
-        k8s-node-2:
+        prod-k8s-node-1:
+        prod-k8s-node-2:
     etcd:
       hosts:
-        k8s-control-plane:
-        k8s-node-1:
-        k8s-node-2:
+        prod-k8s-control-plane:
+        prod-k8s-node-1:
+        prod-k8s-node-2:
     k8s_cluster:
       children:
         kube_control_plane:
